--- a/src/main/resources/fr/mbouklikha/dev/sae_glacium/vue1.fxml
+++ b/src/main/resources/fr/mbouklikha/dev/sae_glacium/vue1.fxml
@@ -10,6 +10,11 @@
          <children>
             <TilePane fx:id="tilePaneFond" layoutX="-8.0" layoutY="-7.0" prefHeight="632.0" prefWidth="1134.0" style="-fx-background-image: url('/fond.jpg');" />
             <TilePane fx:id="tilePane" prefHeight="620.0" prefWidth="1120.0" />
+            <HBox fx:id="conteneurInventaire"
+                  layoutX="10" layoutY="10"
+                  spacing="10"
+                  visible="false"
+                  xmlns:fx="http://javafx.com/fxml"/>
          </children></Pane>
    </children>
 </AnchorPane>
